--- a/home.html
+++ b/home.html
@@ -9,15 +9,19 @@
 			<h2>
 		<a href="home.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="week6a2materials/about.html">About Us</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="week6a2materials/contact.html">Contact</a></td></font>
+		<a href="week6a2materials/contact.html">Contact</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="https://www.google.com/">
+				<img align="center" src="images/google.png" width="50" alt="google"></a>
+	</font>
 		</h2>
 		<h1>TRENDING NOW>></h1>
 		<img src="images/iland.jpg" width="200 px" align="left"/>
-		<a href="https://www.soompi.com/article/1412347wpp/into-the-i-land-heres-what-went-down-in-episodes-2-3"><font size="5 px"><b>Into The “I-LAND”: Here’s What Went Down In Episodes 2 & 3</b></font></a><p><font size="5 px">In these past two weeks of “I-LAND,” we learn about a new grading system, see some shuffling of trainees, and watch as they take on new tests. Here are some of the bigger developments that went down in episodes 2 and 3........</font></p><br><br>
+		<a href="https://www.kpopnews.com/iland-on-a-roll"><font size="5 px"><b>Into The “I-LAND”: Here’s What Went Down In Episodes 2 & 3</b></font></a><p><font size="5 px">In these past two weeks of “I-LAND,” we learn about a new grading system, see some shuffling of trainees, and watch as they take on new tests. Here are some of the bigger developments that went down in episodes 2 and 3........</font></p><br><br>
+		<!--these link doesn't take us to any website, these three websites are just here for the sake of design. As asked in the question, only the above "About us" and "contacts" link will take us to respective webpages-->
 		<img src="images/comeback.jpg" width="200 px" align="left"/>
-		<a href="https://www.soompi.com/article/1412846wpp/more-comebacks-and-debuts-on-the-way-in-july"><font size="5mpx"><b>Lee hi, Somi, ATEEZ, TOO, Eric Nam and so much more comebacks</b></font></a><p><font size="5 px">People are stuck at their homes due to the current situation but that doesn't stop kpop from expanding more and more. From rookie idols to big kpop groups like Twice, Seventeen, Blackpink and Red Velvet..........</font></p><br><br>
+		<a href="https://www.kpopnews.com/wooo"><font size="5mpx"><b>Lee hi, Somi, ATEEZ, TOO, Eric Nam and so much more comebacks</b></font></a><p><font size="5 px">People are stuck at their homes due to the current situation but that doesn't stop kpop from expanding more and more. From rookie idols to big kpop groups like Twice, Seventeen, Blackpink and Red Velvet..........</font></p><br><br>
 		<img src="images/bts1.jpg" width="200 px" align="left"/>
-		<a href="https://www.soompi.com/article/1413362wpp/baskin-robbins-warns-it-may-take-legal-action-after-btss-ad-is-leaked-online"><font size="5mpx"><b>Baskin-Robbins Warns It May Take Legal Action After BTS’s Ad Is Leaked Online</b></font></a><p><font size="5 px">Baskin-Robbins has announced that it may take legal action in response to the leak of BTS’s unreleased commercial. On July 17, Baskin-Robbins Korea released an official statement on its Twitter account after BTS’s upcoming commercial for the brand was leaked online..........</font></p>
+		<a href="https://www.kpopnews.com/blah-blah"><font size="5mpx"><b>Baskin-Robbins Warns It May Take Legal Action After BTS’s Ad Is Leaked Online</b></font></a><p><font size="5 px">Baskin-Robbins has announced that it may take legal action in response to the leak of BTS’s unreleased commercial. On July 17, Baskin-Robbins Korea released an official statement on its Twitter account after BTS’s upcoming commercial for the brand was leaked online..........</font></p>
 		<hr color="red">
 &copy; kpopnews.com, All rights reserved, &trade; &reg; CNM 
 	</body>
