--- a/week7classwork.html
+++ b/week7classwork.html
@@ -5,10 +5,10 @@
 <body>
 	<center><h3>Registration form</h3>
 <form action="#" method="POST" name="singup" enctype="multipart/form-data">
-			<table border=1 cellpadding="10" cellspacing="2" width="75%" >
+			<table border=1 cellpadding="10" cellspacing="2" width="75%" bgcolor="sky blue">
 				<tr>
 					<td><label><b>Enter your first name</b></label></td>
-					<td><input type="text" name="firstname" size="30" maxlength="50" required="required" placeholder="enter your first name">
+					<td><input type="text" name="firstname" size="30" maxlength="50" required="required" placeholder="enter your first name" bgcolor="pink">
 					</td>
 				</tr>
 				<tr>
@@ -81,7 +81,7 @@
 					<input type="file" name="photo"/>
 					</td>
 				</tr>
-			</table><table border=1 cellpadding="10" cellspacing="2" width="75%" >
+			</table><table border=1 cellpadding="10" cellspacing="2" width="75%" bgcolor="yellow">
 				<tr>
 					<td><center>
 						<input type="submit" name="submit" value="Save my data"/>
