--- a/week7classwork.html
+++ b/week7classwork.html
@@ -81,9 +81,8 @@
 					<input type="file" name="photo"/>
 					</td>
 				</tr>
-			</table><table border=1 cellpadding="10" cellspacing="2" width="75%" bgcolor="yellow">
 				<tr>
-					<td><center>
+					<td colspan="2"><center>
 						<input type="submit" name="submit" value="Save my data"/>
 						<input type="reset" name="reset" value="Reset data"/></center>
 					</td>
